--- a/CssCenterDialog/site.css
+++ b/CssCenterDialog/site.css
@@ -1,35 +1,34 @@
-.container
-{
-	margin:auto;
+.container {
+	margin: auto;
 	background-color: red;
 	width: 80vw;
 	height: 80vh;
 	position: absolute;
-	top:50%;
+	top: 50%;
 	left: 50%;
 	margin-left: -40vw;
 	margin-top: -40vh;
 }
-.cbody
-{
+
+.cbody {
 	position: relative;
 	top: 50%;
 	left: 50%;
 	background: yellow;
 	width: 400px;
 	height: 400px;
-	margin:-200px 0 0 -200px;
+	margin: -200px 0 0 -200px;
 }
-.flctainer
-{
+
+.flctainer {
 	margin: auto;
 	background: red;
 	width: 300px;
 	height: 300px;
 	position: absolute;
 }
-.fbody
-{
+
+.fbody {
 	background: yellow;
 	position: absolute;
 	left: 0;
